Update Hall of Famous Vtubers.html

--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -126,7 +126,7 @@
 
         <h4>About this page</h4>
         <p>
-            This page was created by <a href="https://github.com/JmmyLi" target="_blank">Jimmy Li</a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class) at Ningbo Hanvos Kent School.
+            This page was created by <a href="https://github.com/JmmyLi" target="_blank">Jimmy Li</a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class) at Hanvos Kent School.
             <br><i>All avatars used above are under BY - NC Licenses</i>
         </p>
         <button id="learnMore">Click to learn more</button>
