--- a/Hall of Famous Vtubers-CH.html
+++ b/Hall of Famous Vtubers-CH.html
@@ -108,17 +108,6 @@
                     <p>tags:<br>-blue<br>-white</p>
                 </div>
             </li>
-            <li class="profile">
-                <div class="thumbnail" style="width: 120.3px;">
-                    <a href="https://bilibili.com"><img src="img/gawr gura.png" alt="gawr gura" width="100px"></a>
-                </div>
-                <div class="name" style="width: 118.975px;">
-                    <p>Gawr Gura</p>
-                </div>
-                <div class="tags">
-                    <p>tags:<br>-blue<br>-white</p>
-                </div>
-            </li>
         </ul>
 
 
@@ -126,8 +115,10 @@
 
         <h4>关于此页</h4>
         <p>
-            本网页由<a href="https://github.com/JmmyLi" target="_blank">Jimmy Li</a>所作。(一位来自 AP <abbr title="Computer Science Principles">计算机科学原理</abbr> 课的学生)
-            <br><i>以上所有的头像以及图片都为BY - NC许可</i>
+            本网页由
+            <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a>所作。(一位来自 AP <abbr title="Computer Science Principles">计算机科学原理</abbr> 课的学生)
+            <br>
+            <i>以上部分头像以及图片来源于<a href="https://zh.moegirl.org.cn/Mainpage">萌娘百科</a>且为<a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0许可</a>，余下头像及图片为<a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC许可</a>。</i>
         </p>
         <button id="learnMore">点击以了解更多</button>
         <p id="more">
