--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -108,17 +108,6 @@
                     <p>tags:<br>-blue<br>-white</p>
                 </div>
             </li>
-            <li class="profile">
-                <div class="thumbnail" style="width: 120.3px;">
-                    <a href="https://bilibili.com"><img src="img/gawr gura.png" alt="gawr gura" width="100px"></a>
-                </div>
-                <div class="name" style="width: 118.975px;">
-                    <p>Gawr Gura</p>
-                </div>
-                <div class="tags">
-                    <p>tags:<br>-blue<br>-white</p>
-                </div>
-            </li>
         </ul>
 
 
@@ -126,8 +115,12 @@
 
         <h4>About this page</h4>
         <p>
-            This page was created by <a href="https://github.com/JmmyLi" target="_blank">Jimmy Li</a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class) at Hanvos Kent School.
-            <br><i>All avatars used above are under BY - NC Licenses</i>
+            This page was created by
+            <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class).
+            <br>
+            <i>The avatars of Gawr Gura, Rhea, Jing Hua, Bing Tang, Yumeoto Chano, Shigure Ui, Shoto, Kano, LuyeeLuLu, Mu Zi Neko, Noir and Leona used above are from <a href="https://zh.moegirl.org.cn/Mainpage">Moegirlpedia</a> under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0 License</a> 
+                and the rest of avatars are under <a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC license</a>. 
+            </i>
         </p>
         <button id="learnMore">Click to learn more</button>
         <p id="more">
