--- a/Hall of Famous Vtubers-CH.html
+++ b/Hall of Famous Vtubers-CH.html
@@ -118,7 +118,7 @@
             本网页由
             <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a>所作。(一位来自 AP <abbr title="Computer Science Principles">计算机科学原理</abbr> 课的学生)
             <br>
-            <i>以上部分头像以及图片来源于<a href="https://zh.moegirl.org.cn/Mainpage">萌娘百科</a>且为<a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0许可</a>，余下头像及图片为<a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC许可</a>。</i>
+            <i>以上部分头像以及图片来源于<a href="https://zh.moegirl.org.cn/Mainpage">萌娘百科</a>且为<a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0许可</a>，余下头像及图片来源于<a href="https://bilibili.com">哔哩哔哩</a>以及<a href="https://baidu.com">百度</a>且为<a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC许可</a>。</i>
         </p>
         <button id="learnMore">点击以了解更多</button>
         <p id="more">
@@ -131,7 +131,7 @@
     </script>
 
     <!-- beautiful rotating object -->
-    <div class="polyhedron down">
+    <!-- <div class="polyhedron down">
         <div class="rotateContainer downleft">
             <div class="slide s0">
                 <div class="slide s1">
@@ -188,7 +188,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="poly.js"></script>
 </body>
 
