--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -118,8 +118,9 @@
             This page was created by
             <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class).
             <br>
-            <i>The avatars of Gawr Gura, Rhea, Jing Hua, Bing Tang, Yumeoto Chano, Shigure Ui, Shoto, Kano, LuyeeLuLu, Mu Zi Neko, Noir and Leona used above are from <a href="https://zh.moegirl.org.cn/Mainpage">Moegirlpedia</a> under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0 License</a> 
-                and the rest of avatars are under <a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC license</a>. 
+            <i>The avatars of Gawr Gura, Rhea, Jing Hua, Bing Tang, Yumeoto Chano, Shigure Ui, Shoto, Kano, LuyeeLuLu, Mu Zi Neko, Noir and Leona used above are from <a href="https://zh.moegirl.org.cn/Mainpage">Moegirlpedia</a> under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0 License</a>. 
+                <br>
+                The rest of avatars are from <a href="https://bilibili.com">Bilibili</a> and <a href="https://baidu.com">Baidu</a> under <a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC license</a>. 
             </i>
         </p>
         <button id="learnMore">Click to learn more</button>
@@ -133,7 +134,7 @@
     </script>
 
     <!-- beautiful rotating object -->
-    <div class="polyhedron down">
+    <!-- <div class="polyhedron down">
         <div class="rotateContainer downleft">
             <div class="slide s0">
                 <div class="slide s1">
@@ -190,7 +191,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="poly.js"></script>
 </body>
 
