--- a/Hall of Famous Vtubers-CH.html
+++ b/Hall of Famous Vtubers-CH.html
@@ -116,9 +116,9 @@
         <h4>关于此页</h4>
         <p>
             本网页由
-            <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a>所作。(一位来自 AP <abbr title="Computer Science Principles">计算机科学原理</abbr> 课的学生)
+            <a href="https://github.com/JmmyLi" target="_blank" rel="noopener"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a>所作。(一位来自 AP <abbr title="Computer Science Principles">计算机科学原理</abbr> 课的学生)
             <br>
-            <i>以上部分头像以及图片来源于<a href="https://zh.moegirl.org.cn/Mainpage">萌娘百科</a>且为<a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0许可</a>，余下头像及图片来源于<a href="https://bilibili.com">哔哩哔哩</a>以及<a href="https://baidu.com">百度</a>且为<a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC许可</a>。</i>
+            <em>以上部分头像以及图片来源于<a href="https://zh.moegirl.org.cn/Mainpage">萌娘百科</a>且为<a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0许可</a>，余下头像及图片来源于<a href="https://bilibili.com">哔哩哔哩</a>以及<a href="https://baidu.com">百度</a>且为<a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC许可</a>。</em>
         </p>
         <button id="learnMore">点击以了解更多</button>
         <p id="more">
