--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -116,12 +116,12 @@
         <h4>About this page</h4>
         <p>
             This page was created by
-            <a href="https://github.com/JmmyLi" target="_blank"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class).
+            <a href="https://github.com/JmmyLi" target="_blank" rel="noopener"><img alt="JmmyLi" src="https://img.shields.io/badge/GitHub-JmmyLi-blue?logo=github"></a> (a student from AP <abbr title="Computer Science Principles">CSP</abbr> class).
             <br>
-            <i>The avatars of Gawr Gura, Rhea, Jing Hua, Bing Tang, Yumeoto Chano, Shigure Ui, Shoto, Kano, LuyeeLuLu, Mu Zi Neko, Noir and Leona used above are from <a href="https://zh.moegirl.org.cn/Mainpage">Moegirlpedia</a> under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0 License</a>. 
+            <em>The avatars of Gawr Gura, Rhea, Jing Hua, Bing Tang, Yumeoto Chano, Shigure Ui, Shoto, Kano, LuyeeLuLu, Mu Zi Neko, Noir and Leona used above are from <a href="https://zh.moegirl.org.cn/Mainpage">Moegirlpedia</a> under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">BY - NC - SA 3.0 License</a>. 
                 <br>
                 The rest of avatars are from <a href="https://bilibili.com">Bilibili</a> and <a href="https://baidu.com">Baidu</a> under <a href="https://creativecommons.org/licenses/by-sa/4.0/">BY - NC license</a>. 
-            </i>
+            </em>
         </p>
         <button id="learnMore">Click to learn more</button>
         <p id="more">
