--- a/Hall of Famous Vtubers-CH.html
+++ b/Hall of Famous Vtubers-CH.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="vtb.css">
     <link rel="stylesheet" href="polyhedro.css">
+    <link rel="prefetch">
     <title>虚拟主播名人堂</title>
     <style></style>
 </head>
