--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="vtb.css">
     <link rel="stylesheet" href="polyhedro.css">
+    <link rel="prefetch">
     <title>Hall of Famous Vtubers</title>
     <style></style>
 </head>
