Update Hall of Famous Vtubers.html
update intro

--- a/Hall of Famous Vtubers.html
+++ b/Hall of Famous Vtubers.html
@@ -126,7 +126,7 @@
         </p>
         <button id="learnMore">Click to learn more</button>
         <p id="more">
-            This webpage is a simple webpage that introduce Vtubers. It is very simple and you could find the vtuber you like easier than searching.
+            This is a simple webpage that introduces famous Vtubers. You could find Vtubers you like based on your preferences.
         </p>
 
     </div>
